# pico-keyboard

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  main.c  test_tcp_server.py
include/common/: circular_queue.h  communication.h  constants.h  key_event.h  keyboard.h  keyboard_layout.h  mylib.h  proto.h  tusb_config.h  usb_descriptors.h
include/pico_net/: pico_net.h  tcp_struct.h
jenkins/: Dockerfile  pod-template.yaml
scripts/: main_old.c
src/: main.c  main.cpp
src/child/: main.cpp
src/common/: circular_queue.cpp  keyboard.cpp  mylib.cpp  proto.cpp  usb_descriptors.cpp
src/parent/: main.cpp
src/pico_net/: pico_net.cpp
src/temp_sensor/: pico_temp.cpp
tests/: CMakeLists.txt  test_main.cpp
